# MapReducer

./: CMakeLists.txt
src/: common.c  common.h  communication.c  communication.h  mapper.c  master_manager.c  reducer.c  worker_manager.c
